correction bug version mobile d'un décalage à droite

--- a/assets/contact.css
+++ b/assets/contact.css
@@ -20,6 +20,9 @@
 .nous_contacter_form > input{
     height: 30px;
 }
+.nous_contacter_checkbox{
+    
+}
 button{
     padding:10px 20px;
     margin-bottom: 20px;
