--- a/assets/main.css
+++ b/assets/main.css
@@ -179,7 +179,7 @@ nav {
 @media (max-width: 576px) {
   .accueil_titre,
   .accueil_description {
-    width: 100%;
+    /* width: 100%; */
     border-radius: 0;
   }
 }
